Añado un lanzador para Shutter Encoder